Recompile SCSS and fix gallery modal visibility on mobile

--- a/css/style.css
+++ b/css/style.css
@@ -611,6 +611,10 @@ input[type=number]::-webkit-inner-spin-button, input[type=number]::-webkit-outer
   pointer-events: auto;
 }
 
+.gallery-modal {
+  display: none;
+}
+
 @media (min-width: 48rem) {
   .gallery-modal {
     display: none;
