--- a/scss/components/_gallery-modal.scss
+++ b/scss/components/_gallery-modal.scss
@@ -1,6 +1,10 @@
 @use '../abstracts/variables' as *;
 @use '../abstracts/mixins' as *;
 
+.gallery-modal {
+    display: none;
+}
+
 @include respond(md) {
     .gallery-modal {
         display: none;
